<resources>
    <string name="audioRecorder">Audio Recorder</string>
    <string name="thisAppRequiresAccessToThePhonesStorageInOrderToReadAndWriteAudioFiles">This app requires access to the phone\'s storage in order to write audio files</string>
    <string name="accessToTheDevicesMicrophoneIsNeededToRecordAudio">Access to the device\'s microphone is needed to record audio</string>
    <string name="noteIfYouSelectNeverAskAgainYouWillHaveToEnablePermissionsFromTheAppsSettings">NOTE: If you select \"Never ask again\" you will have to enable permissions from the app\'s settings.</string>
    <string name="permissionNeeded">Permission Needed</string>
    <string name="enable">ENABLE</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="expand">Expand</string>
    <string name="recordingName">Recording Name</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="shareWith">Share with</string>
    <string name="recordedTime">Recorded Time</string>
    <string name="startRecording">Start Recording!</string>
    <string name="renameTo">Rename to:</string>
    <string name="noChangesMade">No changes made…</string>
    <string name="cantUseSpecialCharacters">Can\'t use special characters!</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="willBePermanentlyDeleted">This file will be permanently deleted.</string>
    <string name="clickToControlRecording">Click to control recording</string>
    <string name="recordingPaused">Recording Paused</string>
    <string name="stillRecording">Still recording…</string>
    <string name="gotIt">GOT IT</string>
</resources>
